--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "declaration": false,
-    "module": "es2022"
+    "module": "commonjs"
   },
   "include": [
     "src/**/*"
