--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@craigmiller160/ts-functions",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta",
   "author": "craigmiller160",
   "publishConfig": {
     "registry": "https://craigmiller160.ddns.net:30003/repository/npm-private/"
