--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "@craigmiller160/ts-functions",
   "version": "1.0.0-beta",
   "author": "craigmiller160",
+  "sideEffects": false,
   "publishConfig": {
     "registry": "https://craigmiller160.ddns.net:30003/repository/npm-private/"
   },
+  "main": "build/index.js",
+  "typings": "build/index.d.ts",
   "files": [
-    "build"
+    "build/*"
   ],
   "scripts": {
     "build": "yarn lint && yarn test && yarn forceBuild",
