--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "yarn lint && yarn test && yarn forceBuild",
     "lint": "craig-lint",
     "test": "craig-test",
-    "forceBuild": "tsc",
+    "forceBuild": "ts-node scripts/build.ts",
     "validate": "yarn lint && yarn test",
     "prepare": "husky install"
   },
@@ -33,11 +33,14 @@
     "@craigmiller160/jest-config-ts": "^1.0.0-beta.2",
     "@craigmiller160/prettier-config": "^1.0.0-beta.1",
     "@relmify/jest-fp-ts": "^1.1.1",
+    "@types/cross-spawn": "^6.0.2",
+    "cross-spawn": "^7.0.3",
     "fp-ts": "^2.11.7",
     "husky": "^7.0.4",
     "io-ts": "^2.2.16",
     "lint-staged": "^12.1.7",
     "prettier": "^2.5.1",
+    "ts-node": "^10.4.0",
     "ts-pattern": "^3.3.4",
     "typescript": "^4.5.4"
   }
