--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "publishConfig": {
     "registry": "https://craigmiller160.ddns.net:30003/repository/npm-private/"
   },
+  "publishDirectory": "./lib",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
