--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "peerDependencies": {
     "fp-ts": ">=2.11.7",
-    "ts-pattern": ">=3.3.4"
+    "ts-pattern": ">=3.3.4",
+    "date-fns": ">=2.28.0"
   },
   "devDependencies": {
     "@craigmiller160/config-merge": "^1.0.0",
@@ -37,6 +38,7 @@
     "@relmify/jest-fp-ts": "^1.1.1",
     "@types/cross-spawn": "^6.0.2",
     "cross-spawn": "^7.0.3",
+    "date-fns": "^2.28.0",
     "fp-ts": "^2.11.7",
     "husky": "^7.0.4",
     "io-ts": "^2.2.16",
