--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/cross-spawn": "^6.0.2",
     "cross-spawn": "^7.0.3",
     "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.2.2",
     "fp-ts": "^2.11.7",
     "husky": "^7.0.4",
     "immer": "^9.0.12",
