--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
   "devDependencies": {
     "@craigmiller160/config-merge": "^1.0.0",
     "@craigmiller160/eslint-config-jest": "^1.0.0-beta.1",
-    "@craigmiller160/eslint-config-js": "^1.0.0-beta.5",
+    "@craigmiller160/eslint-config-js": "1.0.0",
     "@craigmiller160/eslint-config-prettier": "^1.0.0-beta.1",
-    "@craigmiller160/eslint-config-ts": "^1.0.0-beta.1",
-    "@craigmiller160/jest-config": "^1.0.0-beta.10",
+    "@craigmiller160/eslint-config-ts": "1.0.0",
+    "@craigmiller160/jest-config": "1.0.0",
     "@craigmiller160/jest-config-ts": "^1.0.0-beta.2",
     "@craigmiller160/prettier-config": "^1.0.0-beta.1",
     "@relmify/jest-fp-ts": "^1.1.1",
