--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@craigmiller160/eslint-config-prettier": "^1.0.0-beta.1",
     "@craigmiller160/eslint-config-ts": "1.0.0",
     "@craigmiller160/jest-config": "1.0.0",
-    "@craigmiller160/jest-config-ts": "^1.0.0-beta.2",
+    "@craigmiller160/jest-config-ts": "1.0.0",
     "@craigmiller160/prettier-config": "1.0.0",
     "@relmify/jest-fp-ts": "^1.1.1",
     "@types/cross-spawn": "^6.0.2",
