--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@craigmiller160/config-merge": "^1.0.0",
-    "@craigmiller160/eslint-config-jest": "^1.0.0-beta.1",
+    "@craigmiller160/eslint-config-jest": "1.0.0",
     "@craigmiller160/eslint-config-js": "1.0.0",
     "@craigmiller160/eslint-config-prettier": "^1.0.0-beta.1",
     "@craigmiller160/eslint-config-ts": "1.0.0",
