--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@craigmiller160/config-merge": "^1.0.0",
     "@craigmiller160/eslint-config-jest": "1.0.0",
     "@craigmiller160/eslint-config-js": "1.0.0",
-    "@craigmiller160/eslint-config-prettier": "^1.0.0-beta.1",
+    "@craigmiller160/eslint-config-prettier": "1.0.0",
     "@craigmiller160/eslint-config-ts": "1.0.0",
     "@craigmiller160/jest-config": "1.0.0",
     "@craigmiller160/jest-config-ts": "1.0.0",
