--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@craigmiller160/ts-functions",
-  "version": "1.0.0",
+  "version": "1.1.0-beta",
   "author": "craigmiller160",
   "sideEffects": false,
   "publishConfig": {
