--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "registry": "https://craigmiller160.ddns.net:30003/repository/npm-private/"
   },
   "publishDirectory": "./lib",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "module": "lib/es/index.js",
   "typings": "index.d.ts",
-  "module": "es6/index.js",
   "scripts": {
     "build": "yarn lint && yarn test && yarn forceBuild",
     "lint:project": "craig-lint",
