--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "registry": "https://craigmiller160.ddns.net:30003/repository/npm-private/"
   },
   "publishDirectory": "./lib",
-  "main": "lib/index.js",
-  "module": "lib/es/index.js",
+  "main": "index.js",
+  "module": "es/index.js",
   "typings": "index.d.ts",
   "scripts": {
     "build": "yarn lint && yarn test && yarn forceBuild",
