--- a/package.json
+++ b/package.json
@@ -14,29 +14,32 @@
     "build": "yarn lint && yarn test && yarn forceBuild",
     "lint:project": "craig-lint",
     "lint": "yarn lint:project && yarn lint:scripts",
-    "lint:scripts": "eslint scripts --fix --max-warnings=0",
+    "lint:scripts": "craig-lint scripts",
     "test": "craig-test",
     "forceBuild": "ts-node scripts/build.ts",
     "validate": "yarn lint && yarn test",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{ts,tsx}": "eslint --fix --max-warnings=0"
+    "*.{ts,tsx}": "craig-lint"
   },
   "peerDependencies": {
-    "date-fns": ">=2.28.0",
+    "date-fns": "^2.28.0",
     "fp-ts": ">=2.11.7",
-    "ts-pattern": ">=4.0.2"
+    "ts-pattern": "^4.0.2"
   },
   "devDependencies": {
+    "@craigmiller160/babel-config": "^1.1.1",
+    "@craigmiller160/babel-config-core-polyfills": "^1.0.1",
+    "@craigmiller160/babel-config-react": "1.0.1",
     "@craigmiller160/config-merge": "^1.0.1",
-    "@craigmiller160/eslint-config-jest": "1.0.1",
-    "@craigmiller160/eslint-config-js": "1.0.1",
-    "@craigmiller160/eslint-config-prettier": "1.0.1",
-    "@craigmiller160/eslint-config-ts": "1.0.2",
-    "@craigmiller160/jest-config": "1.0.4",
-    "@craigmiller160/jest-config-ts": "1.0.2",
-    "@craigmiller160/prettier-config": "1.0.1",
+    "@craigmiller160/eslint-config-jest": "^1.1.0",
+    "@craigmiller160/eslint-config-js": "^1.3.0",
+    "@craigmiller160/eslint-config-prettier": "^1.0.2",
+    "@craigmiller160/eslint-config-react": "1.1.0",
+    "@craigmiller160/eslint-config-ts": "^1.1.2",
+    "@craigmiller160/jest-config": "2.2.0-beta.3",
+    "@craigmiller160/prettier-config": "^1.0.2",
     "@relmify/jest-fp-ts": "^1.1.1",
     "@types/cross-spawn": "^6.0.2",
     "cross-spawn": "^7.0.3",
@@ -50,6 +53,6 @@
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
     "ts-pattern": "^4.0.2",
-    "typescript": "^4.5.4"
+    "typescript": "^5.1.3"
   }
 }
