--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@craigmiller160/eslint-config-ts": "^1.1.2",
     "@craigmiller160/jest-config": "2.2.0-beta.3",
     "@craigmiller160/prettier-config": "^1.0.2",
+    "@craigmiller160/swc-config": "1.0.0-beta.9",
     "@relmify/jest-fp-ts": "^1.1.1",
     "@types/cross-spawn": "^6.0.2",
     "cross-spawn": "^7.0.3",
