--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@craigmiller160/swc-config": "1.0.0-beta.9",
     "@relmify/jest-fp-ts": "^1.1.1",
     "@types/cross-spawn": "^6.0.2",
+    "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.2.2",
