--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "husky": "^7.0.4",
     "immer": "^9.0.12",
     "io-ts": "^2.2.16",
+    "jest": "^29.6.1",
     "lint-staged": "^12.1.7",
     "prettier": "^2.5.1",
     "ts-pattern": "^4.0.2",
