--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@craigmiller160/prettier-config": "^1.0.2",
     "@craigmiller160/swc-config": "1.0.0-beta.9",
     "@relmify/jest-fp-ts": "^1.1.1",
+    "@swc/cli": "^0.1.62",
     "@types/cross-spawn": "^6.0.2",
     "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
