--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "module": "./lib/esm/index.js",
   "types": "./lib/types/index.d.ts",
   "exports": {
-    ".": {
-      "import": "./lib/esm",
-      "require": "./lib/cjs"
+    "./*": {
+      "import": "./lib/esm/*",
+      "require": "./lib/cjs/*"
     }
   },
   "publishConfig": {
