More exports fixes

--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
       "types": "./lib/types/index.d.ts",
       "import": "./lib/esm/index.js",
       "require": "./lib/cjs/index.js"
+    },
+    "./*": {
+      "types": "./lib/types/*.d.ts",
+      "import": "./lib/esm/*.js",
+      "require": "./lib/cjs/*.js"
     }
   },
   "publishConfig": {
