--- a/package.json
+++ b/package.json
@@ -23,39 +23,14 @@
     ".yalc"
   ],
   "scripts": {
-    "build": "npm run lint && npm run test && tsc --noEmit && npm run forceBuild",
-    "lint": "craig-lint",
-    "test": "craig-test",
-    "forceBuild": "rm -rf lib && craig-multi-module && tsc --declaration --emitDeclarationOnly --outDir ./lib/types",
-    "validate": "npm run lint && npm run test",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": "craig-lint"
   },
   "peerDependencies": {
     "date-fns": "^2.28.0",
     "fp-ts": ">=2.11.7",
-    "ts-pattern": "^4.0.2"
+    "ts-pattern": "^5.0.5"
   },
   "devDependencies": {
-    "@craigmiller160/babel-config": "^1.1.1",
-    "@craigmiller160/babel-config-core-polyfills": "^1.0.1",
-    "@craigmiller160/babel-config-react": "1.0.1",
-    "@craigmiller160/config-merge": "^1.0.1",
-    "@craigmiller160/eslint-config-jest": "^1.1.0",
-    "@craigmiller160/eslint-config-js": "^1.3.0",
-    "@craigmiller160/eslint-config-prettier": "^1.0.2",
-    "@craigmiller160/eslint-config-react": "1.1.0",
-    "@craigmiller160/eslint-config-ts": "^1.1.2",
-    "@craigmiller160/jest-config": "2.2.0-beta.4",
-    "@craigmiller160/prettier-config": "^1.0.2",
-    "@craigmiller160/swc-config": "1.0.0-beta.9",
     "@relmify/jest-fp-ts": "^1.1.1",
-    "@swc/cli": "^0.1.62",
-    "@types/cross-spawn": "^6.0.2",
-    "cross-env": "^7.0.3",
-    "cross-spawn": "^7.0.3",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.2.2",
     "fp-ts": "^2.11.7",
@@ -65,7 +40,8 @@
     "jest": "^29.6.1",
     "lint-staged": "^12.1.7",
     "prettier": "^2.5.1",
-    "ts-pattern": "^4.0.2",
-    "typescript": "^5.1.3"
+    "ts-pattern": "^5.0.5",
+    "typescript": "^5.1.3",
+    "@craigmiller160/js-config": "file:.yalc/@craigmiller160/js-config"
   }
 }
