--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ts-pattern": "^5.0.5"
   },
   "devDependencies": {
+    "@craigmiller160/js-config": "file:.yalc/@craigmiller160/js-config",
     "@relmify/jest-fp-ts": "^2.1.1",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.2.2",
@@ -42,7 +43,9 @@
     "lint-staged": "^12.1.7",
     "prettier": "^2.5.1",
     "ts-pattern": "^5.0.5",
-    "typescript": "^5.1.3",
-    "@craigmiller160/js-config": "file:.yalc/@craigmiller160/js-config"
+    "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "vitest": "^0.34.4"
   }
 }
