--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "@craigmiller160/js-config/configs/typescript/tsconfig.json",
   "include": [
-    "src/**/*",
-    "vite.config.mts"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
