--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ts-pattern": "^5.0.5"
   },
   "devDependencies": {
-    "@craigmiller160/js-config": "file:.yalc/@craigmiller160/js-config",
+    "@craigmiller160/js-config": "1.0.0-beta.1",
     "@relmify/jest-fp-ts": "^2.1.1",
     "@types/node": "^20.6.5",
     "date-fns": "^2.28.0",
