--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,11 @@
 {
-  "compilerOptions": {
-    "target": "es2020",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "outDir": "./lib",
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "react-jsx",
-    "declaration": true,
-    "module": "commonjs"
-  },
+  "extends": "@craigmiller160/js-config/configs/typescript/tsconfig.json",
   "include": [
     "src/**/*"
   ],
   "exclude": [
     "node_modules",
-    "lib",
     "build",
-    ".yalc"
+    "lib"
   ]
 }
