--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@craigmiller160/js-config/configs/typescript/tsconfig.json",
+  "extends": "@craigmiller160/js-config/configs/typescript/tsconfig.commonjs.json",
   "include": [
     "src/**/*"
   ],
