--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "ts-pattern": "^5.0.5"
   },
   "devDependencies": {
-    "@craigmiller160/js-config": "1.0.0-beta.1",
+    "@craigmiller160/js-config": "1.0.0-beta.3",
     "@relmify/jest-fp-ts": "^2.1.1",
     "@types/node": "^20.6.5",
+    "cross-env": "^7.0.3",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.2.2",
     "fp-ts": "^2.16.1",
