--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     }
   },
   "publishConfig": {
-    "registry": "https://nexus-craigmiller160.ddns.net/repository/npm-private/"
+    "registry": "https://nexus.craigmiller160.us/repository/npm-private/"
   },
   "files": [
     "lib",
@@ -31,7 +31,7 @@
     "ts-pattern": "^5.0.5"
   },
   "devDependencies": {
-    "@craigmiller160/js-config": "1.0.0-beta.3",
+    "@craigmiller160/js-config": "1.0.4",
     "@relmify/jest-fp-ts": "^2.1.1",
     "@types/node": "^20.6.5",
     "cross-env": "^7.0.3",
