--- a/package.json
+++ b/package.json
@@ -38,14 +38,9 @@
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.2.2",
     "fp-ts": "^2.16.1",
-    "husky": "^7.0.4",
     "immer": "^9.0.12",
     "io-ts": "^2.2.20",
-    "jest": "^29.6.1",
-    "lint-staged": "^12.1.7",
-    "prettier": "^2.5.1",
-    "ts-pattern": "^5.0.5",
-    "typescript": "^5.1.3"
+    "ts-pattern": "^5.0.5"
   },
   "dependencies": {
     "vitest": "^0.34.4"
