--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     ".yalc"
   ],
   "scripts": {
-    "build": "c-validate && c-build-lib"
+    "build": "c-validate && c-build-lib",
+    "postinstall": "c-init"
   },
   "peerDependencies": {
     "date-fns": "^2.28.0",
